[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Small slime 1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Slime.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 5 )

[sub_resource type="Animation" id=2]
resource_name = "Walking"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 5.5

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 5 )

[node name="Slime" instance=ExtResource( 1 )]
script = ExtResource( 3 )
MAX_SPEED = 20
WALKING_DIRECTION = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
hframes = 3

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Walking"
playback_speed = 3.33
anims/Walking = SubResource( 2 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( -0.5, -5.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 4 )

[editable path="Hurtbox"]

[editable path="Hitbox"]
